crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_add_modal_qr_counts_panel.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────┌ Add account ─────────────────────────────────────────────────┐────── │
│       │ Import complete.                                             │       │
│       │                                                              │       │
│       │ Imported:    2                                               │       │
│       │ Skipped:     1                                               │       │
│       │ Replaced:    0                                               │       │
│       │ Appended:    0                                               │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                     Enter or Esc to close                    │       │
│ ──────└──────────────────────────────────────────────────────────────┘────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
