crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_add_modal_qr_counts_panel_with_validation_warnings.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│       ┌ Add account ─────────────────────────────────────────────────┐       │
│       │ Import complete.                                             │       │
│       │                                                              │       │
│       │ Imported:    1                                               │       │
│       │ Skipped:     1                                               │       │
│       │ Replaced:    0                                               │       │
│       │ Appended:    0                                               │       │
│       │                                                              │       │
│       │ secret is shorter than recommended (decoded length 5 bytes;  │       │
│       │ recommended minimum 16 bytes)                                │       │
│       │ secret is shorter than recommended (decoded length 1 bytes;  │       │
│       │ recommended minimum 16 bytes)                                │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                     Enter or Esc to close                    │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
