crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_add_modal_qr_no_qrs_decoded.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────┌ Add account ─────────────────────────────────────────────────┐────── │
│       │ Mode:   Manual       URI     ▶ QR ◀                          │       │
│       │                                                              │       │
│       │ Label:      [  ]                                             │       │
│       │ Issuer:     [  ]                                             │       │
│       │ Secret:     [  ]                                             │       │
│       │ Algorithm:  SHA1                                             │       │
│       │ Digits:     6                                                │       │
│       │ Kind:       TOTP                                             │       │
│       │ Period (s): 30                                               │       │
│       │ Icon hint:  [  ]                                             │       │
│       │                                                              │       │
│       │ no entries to import                                         │       │
│       │                                                              │       │
│       │       Tab cycles fields  ·  Enter submit  ·  Esc cancel      │       │
│ ──────└──────────────────────────────────────────────────────────────┘────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
