crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_add_modal_qr_oversized_rgba_buffer.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 906
expression: rendered
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────┌ Add account ─────────────────────────────────────────────────┐────── │
│       │ Mode:   Manual       URI     ▶ QR ◀                          │       │
│       │                                                              │       │
│       │ Label:      [  ]                                             │       │
│       │ Issuer:     [  ]                                             │       │
│       │ Secret:     [  ]                                             │       │
│       │ Algorithm:  SHA1                                             │       │
│       │ Digits:     6                                                │       │
│       │ Kind:       TOTP                                             │       │
│       │ Period (s): 30                                               │       │
│       │ Icon hint:  [  ]                                             │       │
│       │                                                              │       │
│       │ validation error: qr_image: image_too_large                  │       │
│       │                                                              │       │
│       │       Tab cycles fields  ·  Enter submit  ·  Esc cancel      │       │
│ ──────└──────────────────────────────────────────────────────────────┘────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
