crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_add_modal_save_not_committed.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────┌ Add account ─────────────────────────────────────────────────┐────── │
│       │ Mode: ▶ Manual ◀     URI       QR                            │       │
│       │                                                              │       │
│       │ Label:      [  ]                                             │       │
│       │ Issuer:     [  ]                                             │       │
│       │ Secret:     [  ]                                             │       │
│       │ Algorithm:  SHA1                                             │       │
│       │ Digits:     6                                                │       │
│       │ Kind:       TOTP                                             │       │
│       │ Period (s): 30                                               │       │
│       │ Icon hint:  [  ]                                             │       │
│       │                                                              │       │
│       │ save not committed (committed=false)                         │       │
│       │                                                              │       │
│       │       Tab cycles fields  ·  Enter submit  ·  Esc cancel      │       │
│ ──────└──────────────────────────────────────────────────────────────┘────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
