crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_create_vault_choose_mode_plaintext_selected.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin — create vault ──────────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /var/lib/paladin/vault.bin                                           │
│                                                                              │
│  Choose vault protection:                                                    │
│                                                                              │
│    Encrypted (recommended) — protect this vault with a passphrase.           │
│  ▶ Plaintext (insecure) — store secrets unencrypted on disk.                 │
│                                                                              │
│  ↑/↓ or j/k to select; Enter to continue; q or Esc to quit.                  │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
